Crash while modifying shader nodes #78358

Closed
opened 2020-06-27 15:11:46 +02:00 by Volo · 11 comments

System Information
Operating system: Windows 10 v 2004 (OS Build 19041.329)
Graphics card: NVIDIA GTX 1050 2 Gb

Blender Version
Broken: Blender 2.83.1 Released Version
Worked: Blender 2.82 Released Version

Short description of error
Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7069F2948
Module : C:\Program Files\Blender Foundation\Blender 2.83\blender.exe my_startup.blend

blender_debug_output.txt

blender_system_info.txt

Exact steps for others to reproduce the error
Abnormal exit when I am moving any nodes in shader editor (Shading tab).

**System Information** Operating system: Windows 10 v 2004 (OS Build 19041.329) Graphics card: NVIDIA GTX 1050 2 Gb **Blender Version** Broken: Blender 2.83.1 Released Version Worked: Blender 2.82 Released Version **Short description of error** Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7069F2948 Module : C:\Program Files\Blender Foundation\Blender 2.83\blender.exe [my_startup.blend](https://archive.blender.org/developer/F8647713/my_startup.blend) [blender_debug_output.txt](https://archive.blender.org/developer/F8647716/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F8647715/blender_system_info.txt) **Exact steps for others to reproduce the error** Abnormal exit when I am moving any nodes in shader editor (Shading tab).

Added subscriber: @hadouken

Added subscriber: @hadouken
Collaborator

Added subscriber: @ankitm

Added subscriber: @ankitm
Collaborator

Please try 2.90 from https://builder.blender.org/download/
and run the blender_debug_log.cmd you find in that folder. After crash, upload both files.
Then open blender_debug_output.txt and go to its bottom. you'll see a file path, pointing to temp. Upload that txt file too.

Please try 2.90 from https://builder.blender.org/download/ and run the `blender_debug_log.cmd` you find in *that* folder. After crash, upload both files. Then open `blender_debug_output.txt` and go to its bottom. you'll see a file path, pointing to `temp`. Upload that txt file too.
Collaborator

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Ankit Meel changed title from Error: EXCEPTION_ACCESS_VIOLATION Blender 2.83.1 to Crash while modifying shader nodes 2020-06-27 17:47:40 +02:00
blender-2.90.0-b7b57e7155ee-windows64 [blender_system_info.txt](https://archive.blender.org/developer/F8647895/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8647894/blender_debug_output.txt) [blender.crash.txt](https://archive.blender.org/developer/F8647893/blender.crash.txt)
Collaborator

I think it can pinned down to 77fdd189e4 which is a temporary fix for #76970.

Abnormal exit when I am moving any nodes in shader editor (Shading tab).

It would be helpful if we know how to get into such a state of nodes that moving them causes the crash. Please add that.

I think it can pinned down to 77fdd189e4 which is a temporary fix for #76970. > Abnormal exit when I am moving any nodes in shader editor (Shading tab). It would be helpful if we know how to get into such a state of nodes that moving them causes the crash. Please add that.
https://youtu.be/RoDQOZp0yhE ![blender_nodes.png](https://archive.blender.org/developer/F8647942/blender_nodes.png)

This issue was referenced by c8d0a615ef

This issue was referenced by c8d0a615efcb8398ae6e8f90ba09e9567dd750fd

This issue was referenced by 27783b4ac7

This issue was referenced by 27783b4ac7a31b09baff0ef1bc06acdddafc6987

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-06-30 17:36:49 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78358
There is no content yet.