Fix T78358: random crash editing shader nodes with textures